Combinations converted in dialog fragment, just fails the search bar colors

--- a/app/src/main/res/layout/game_dialog_hand_actions_fragment.xml
+++ b/app/src/main/res/layout/game_dialog_hand_actions_fragment.xml
@@ -86,8 +86,7 @@
                         android:layout_marginTop="@dimen/half_and_quarter_standard_margin"
                         android:layout_marginBottom="@dimen/quarter_standard_margin"
                         android:importantForAccessibility="no"
-                        android:src="@drawable/ic_trophy_white"
-                        app:tint="@color/white" />
+                        android:src="@drawable/ic_trophy_white" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -139,7 +138,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/quarter_standard_margin"
                         android:importantForAccessibility="no"
-                        android:src="@drawable/ic_whistle_black_24"
+                        android:src="@drawable/ic_whistle"
                         app:tint="@color/white" />
 
                     <TextView
@@ -167,7 +166,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/quarter_standard_margin"
                         android:importantForAccessibility="no"
-                        android:src="@drawable/ic_whistle_black_24"
+                        android:src="@drawable/ic_whistle"
                         app:tint="@color/white" />
 
                     <TextView
