--- a/app/src/main/res/drawable/ic_flag.xml
+++ b/app/src/main/res/drawable/ic_flag.xml
@@ -21,6 +21,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#e8eaed"
+        android:fillColor="@color/white"
         android:pathData="M14.4,6L14,4H5v17h2v-7h5.6l0.4,2h7V6z" />
 </vector>
