--- a/app/src/main/res/drawable/ic_whistle.xml
+++ b/app/src/main/res/drawable/ic_whistle.xml
@@ -1,5 +1,5 @@
 <!--
-  ~     Copyright © 2024  Ernesto Vega de la Iglesia Soria
+  ~ Copyright © 2024  Ernesto Vega de la Iglesia Soria
   ~
   ~     This program is free software: you can redistribute it and/or modify
   ~     it under the terms of the GNU General Public License as published by
@@ -18,9 +18,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
+    android:autoMirrored="true"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#e8eaed"
-        android:pathData="M20,11H7.83l5.59,-5.59L12,4l-8,8 8,8 1.41,-1.41L7.83,13H20v-2z" />
+        android:fillColor="@color/white"
+        android:pathData="M8.5,9A6.5,6.5 0,0 0,2 15.5A6.5,6.5 0,0 0,8.5 22A6.5,6.5 0,0 0,15 15.5V13.91L22,12V9H11V11H9V9H8.5M11,2V7H9V2H11M6.35,7.28C5.68,7.44 5.04,7.68 4.43,8L2.14,4.88L3.76,3.7L6.35,7.28M17.86,4.88L16.32,7H13.85L16.24,3.7L17.86,4.88Z" />
 </vector>
