--- a/app/src/main/res/layout/combinations_dialog_fragment.xml
+++ b/app/src/main/res/layout/combinations_dialog_fragment.xml
@@ -21,15 +21,14 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".app.screens.diffs_calculator.DiffsCalculatorDialogFragment">
+    tools:context=".app.screens.combinations.CombinationsDialogFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarCombinations"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:autofillHints="no"
         android:background="@color/colorPrimary"
-        android:orientation="horizontal"
-        android:foregroundTint="@color/white"
         app:navigationIcon="@drawable/ic_close"
         app:title="@string/combinations"
         app:titleTextColor="@color/white" />
