--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -41,7 +41,13 @@
 
         <action
             android:id="@+id/action_oldGamesFragment_to_nav_graph_game"
-            app:destination="@id/nav_graph_game" />
+            app:destination="@id/nav_graph_game">
+
+            <argument
+                android:name="gameId"
+                app:argType="long" />
+
+        </action>
 
     </fragment>
 
@@ -65,7 +71,13 @@
 
         <action
             android:id="@+id/action_setupNewGameDialogFragment_to_nav_graph_game"
-            app:destination="@id/nav_graph_game" />
+            app:destination="@id/nav_graph_game">
+
+            <argument
+                android:name="gameId"
+                app:argType="long" />
+
+        </action>
 
     </dialog>
 
