New seats by ranking view working except for penalties

--- a/app/src/main/res/menu/game_menu.xml
+++ b/app/src/main/res/menu/game_menu.xml
@@ -21,6 +21,7 @@
         android:id="@+id/action_seats_orientation"
         android:icon="@drawable/ic_orientation_down"
         android:title="@string/rotate_seats"
+        android:visible="false"
         app:showAsAction="ifRoom" />
 
     <item
