--- a/app/src/main/res/layout/custom_table_seats.xml
+++ b/app/src/main/res/layout/custom_table_seats.xml
@@ -14,58 +14,120 @@
   ~     You should have received a copy of the GNU General Public License
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:background="@color/grayLight">
 
-    <ImageButton
-        android:id="@+id/btTableSeatsShowDiffs"
-        android:layout_width="@dimen/third_standard_margin"
-        android:layout_height="@dimen/third_standard_margin"
-        android:layout_centerInParent="true"
-        android:background="@android:color/transparent"
-        android:importantForAccessibility="no"
-        android:scaleType="centerCrop"
-        android:src="@drawable/ic_calc"
-        android:visibility="invisible"
-        app:tint="@color/gray"
-        tools:visibility="visible" />
+    <RelativeLayout
+        android:id="@+id/rlTableSeatsBySeat"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:visibility="visible">
 
-    <include
-        android:id="@+id/iGameTableSeatEast"
-        layout="@layout/custom_table_seat_east"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btTableSeatsShowDiffs"
-        android:layout_centerHorizontal="true" />
+        <ImageButton
+            android:id="@+id/btTableSeatsShowDiffs"
+            android:layout_width="@dimen/third_standard_margin"
+            android:layout_height="@dimen/third_standard_margin"
+            android:layout_centerInParent="true"
+            android:background="@android:color/transparent"
+            android:importantForAccessibility="no"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_calc"
+            android:visibility="invisible"
+            app:tint="@color/gray"
+            tools:visibility="visible" />
 
-    <include
-        android:id="@+id/iGameTableSeatSouth"
-        layout="@layout/custom_table_seat_south"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/btTableSeatsShowDiffs"
-        tools:ignore="RtlHardcoded" />
+        <include
+            android:id="@+id/iGameTableSeatEast"
+            layout="@layout/custom_table_seat_east"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btTableSeatsShowDiffs"
+            android:layout_centerHorizontal="true" />
 
-    <include
-        android:id="@+id/iGameTableSeatWest"
-        layout="@layout/custom_table_seat_west"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/btTableSeatsShowDiffs"
-        android:layout_centerHorizontal="true" />
+        <include
+            android:id="@+id/iGameTableSeatSouth"
+            layout="@layout/custom_table_seat_south"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/btTableSeatsShowDiffs"
+            tools:ignore="RtlHardcoded" />
 
-    <include
-        android:id="@+id/iGameTableSeatNorth"
-        layout="@layout/custom_table_seat_north"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/btTableSeatsShowDiffs"
-        tools:ignore="RtlHardcoded" />
+        <include
+            android:id="@+id/iGameTableSeatWest"
+            layout="@layout/custom_table_seat_west"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/btTableSeatsShowDiffs"
+            android:layout_centerHorizontal="true" />
 
-</RelativeLayout>
+        <include
+            android:id="@+id/iGameTableSeatNorth"
+            layout="@layout/custom_table_seat_north"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/btTableSeatsShowDiffs"
+            tools:ignore="RtlHardcoded" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/llTableSeatsByRanking"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        tools:visibility="visible">
+
+        <include
+            android:id="@+id/iGameTableSeatByRankingFirst"
+            layout="@layout/custom_table_seat_ranking"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/iGameTableSeatByRankingSecond" />
+
+        <include
+            android:id="@+id/iGameTableSeatByRankingSecond"
+            layout="@layout/custom_table_seat_ranking"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/btTableSeatsByRankingShowDiffs"
+            android:layout_marginTop="16dp" />
+
+        <ImageButton
+            android:id="@+id/btTableSeatsByRankingShowDiffs"
+            android:layout_width="@dimen/third_standard_margin"
+            android:layout_height="@dimen/third_standard_margin"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="16dp"
+            android:background="@android:color/transparent"
+            android:importantForAccessibility="no"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_calc"
+            android:visibility="invisible"
+            app:tint="@color/gray"
+            tools:visibility="visible" />
+
+        <include
+            android:id="@+id/iGameTableSeatByRankingThird"
+            layout="@layout/custom_table_seat_ranking"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/btTableSeatsByRankingShowDiffs"
+            android:layout_marginTop="16dp" />
+
+        <include
+            android:id="@+id/iGameTableSeatByRankingFourth"
+            layout="@layout/custom_table_seat_ranking"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/iGameTableSeatByRankingThird"
+            android:layout_marginTop="16dp" />
+
+    </RelativeLayout>
+
+</FrameLayout>
