Extracted GameTableSeats by Seat and by Ranking to separate layouts. Refactored repetitive code. Fixed small bugs. Reduced layuots duplication.

--- a/app/src/main/res/layout/custom_table_seat_by_seat.xml
+++ b/app/src/main/res/layout/custom_table_seat_by_seat.xml
@@ -16,12 +16,12 @@
   -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rlTableSeatEastContainer"
+    android:id="@+id/rlTableSeatBySeatContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/ivTableSeatEastSeatWindIcon"
+        android:id="@+id/ivTableSeatBySeatWindIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -30,20 +30,20 @@
         tools:src="@drawable/ic_east" />
 
     <TextView
-        android:id="@+id/tvTableSeatEastPoints"
+        android:id="@+id/tvTableSeatBySeatPoints"
         style="@style/TextViewTableSeat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ivTableSeatEastSeatWindIcon"
+        android:layout_below="@+id/ivTableSeatBySeatWindIcon"
         android:layout_centerHorizontal="true"
         android:textSize="@dimen/table_player_points_text_size"
         tools:text="-000" />
 
     <TextView
-        android:id="@+id/tvTableSeatEastPenaltyPoints"
+        android:id="@+id/tvTableSeatBySeatPenaltyPoints"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvTableSeatEastPoints"
+        android:layout_below="@+id/tvTableSeatBySeatPoints"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="-8dp"
         android:textSize="@dimen/table_player_penalty_points_text_size"
@@ -53,38 +53,37 @@
         tools:visibility="visible" />
 
     <View
-        android:id="@+id/vGameTableSeatEastAuxStart"
+        android:id="@+id/vGameTableSeatBySeatAuxStart"
         style="@style/auxView"
-        android:layout_above="@+id/tvTableSeatEastName"
-        android:layout_below="@+id/ivTableSeatEastSeatWindIcon"
+        android:layout_above="@+id/tvTableSeatBySeatName"
+        android:layout_below="@+id/ivTableSeatBySeatWindIcon"
         android:layout_centerHorizontal="true"
-        android:layout_toStartOf="@+id/tvTableSeatEastPoints" />
+        android:layout_toStartOf="@+id/tvTableSeatBySeatPoints" />
 
     <View
-        android:id="@+id/vGameTableSeatEastAuxEnd"
+        android:id="@+id/vGameTableSeatBySeatAuxEnd"
         style="@style/auxView"
-        android:layout_above="@+id/tvTableSeatEastName"
-        android:layout_below="@+id/ivTableSeatEastSeatWindIcon"
+        android:layout_above="@+id/tvTableSeatBySeatName"
+        android:layout_below="@+id/ivTableSeatBySeatWindIcon"
         android:layout_centerHorizontal="true"
-        android:layout_toEndOf="@+id/tvTableSeatEastPoints" />
-
+        android:layout_toEndOf="@+id/tvTableSeatBySeatPoints" />
 
     <TextView
-        android:id="@+id/tvTableSeatEastName"
+        android:id="@+id/tvTableSeatBySeatName"
         style="@style/TextViewTableSeat"
         android:layout_width="164dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvTableSeatEastPenaltyPoints"
+        android:layout_below="@+id/tvTableSeatBySeatPenaltyPoints"
         android:layout_centerHorizontal="true"
         android:ellipsize="end"
         tools:text="@string/player_name_placeholder" />
 
     <include
-        android:id="@+id/iGameTableSeatEastDiffs"
+        android:id="@+id/iGameTableSeatBySeatDiffs"
         layout="@layout/custom_diffs_small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvTableSeatEastName"
+        android:layout_below="@+id/tvTableSeatBySeatName"
         android:layout_centerHorizontal="true"
         android:visibility="gone"
         tools:visibility="visible" />
