--- a/app/src/main/res/layout/diffs_calculator_fragment.xml
+++ b/app/src/main/res/layout/diffs_calculator_fragment.xml
@@ -15,23 +15,11 @@
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray"
     android:orientation="vertical"
-    tools:context=".app.screens.diffs_calculator.DiffsCalculatorDialogFragment">
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbarDiffsCalculator"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        android:orientation="horizontal"
-        app:navigationIcon="@drawable/ic_close"
-        app:title="@string/diffsCalculator"
-        app:titleTextColor="@color/white" />
+    tools:context=".app.screens.diffs_calculator.DiffsCalculatorFragment">
 
     <LinearLayout
         android:id="@+id/llDiffsCalculatorTitles"
