--- a/app/src/main/res/navigation/nav_graph_game.xml
+++ b/app/src/main/res/navigation/nav_graph_game.xml
@@ -53,11 +53,11 @@
 
     </fragment>
 
-    <dialog
+    <fragment
         android:id="@+id/combinationsDialogFragment"
-        android:name="com.etologic.mahjongscoring2.app.screens.combinations.CombinationsDialogFragment"
+        android:name="com.etologic.mahjongscoring2.app.screens.combinations.CombinationsFragment"
         android:label="@string/combinations"
-        tools:layout="@layout/combinations_dialog_fragment" />
+        tools:layout="@layout/combinations_fragment" />
 
     <dialog
         android:id="@+id/diceDialogFragment"
